<resources>
    <string name="app_name">LinkUp</string>
    <string name="facebook_app_id">113321996025647</string>
    <string name="fb_login_protocol_scheme">fb113321996025647</string>
    <string name="logout">Logout</string>
    <string name="cancel_login">Login Cancelado</string>
    <string name="error_login">Error en Login</string>
    <string name="max_distance">Distancia Máxima</string>
    <string name="age_range">Rango de Edad</string>
    <string name="i_want">Quiero buscar</string>
    <string name="just_friends">Sólo amigos</string>
    <string name="males">Hombres</string>
    <string name="females">Mujeres</string>
    <string name="notifications">Notificaciones</string>
    <string name="invisible">Modo invisible</string>
    <string name="no_publicidad">Bloquear publicidad</string>
    <string name="more_preferences">Más preferencias</string>
    <string name="create_profile">Registrarse</string>
    <string name="registering">Registrando usuario</string>
    <string name="saving_profile">Guardando Información de Perfil</string>
    <string name="saving_settings">Guardando Preferencias</string>
    <string name="no_connection_to_server">No hay conexión con el servidor</string>
    <string name="continue_settings">Continuar</string>
    <string name="save_profile">Guardar</string>
    <string name="reload_facebook">Sincronizar con Facebook</string>
    <string name="reload_location">Actualizar ubicación</string>
    <string name="fetching_facebook_info">Recuperando información de Facebook</string>
    <string name="missing_photo">Lo sentimos, es necesario tener una foto de perfil en Facebook para poder utilizar esta aplicación. Por favor, agrega una y vuelve a intentarlo.</string>
    <string name="age_restriction">Lo sentimos, debes ser mayor de 18 años para utilizar esta aplicación.</string>
    <string name="location_restriction">Lo sentimos, necesitamos conocer tu ubicación para que puedas utilizar esta aplicación.</string>
    <string name="location_error">Lo sentimos, ha ocurrido un error intentando obtener su ubicación.</string>
    <string name="location_profile_fragment_permission_denied">Lo sentimos, debes permitir que la aplicación acceda a tu ubicación para poder actualizarla.</string>
    <string name="location_profile_fragment_settings_denied">Lo sentimos, debes permitir acceder a tu ubicación para poder actualizarla.</string>
    <string name="location_profile_error">Lo sentimos, ha ocurrido un error intentando actualizar su ubicación.</string>
    <string name="fetching_location">Cargando ubicación</string>
    <string name="location_popup_button">Entendido</string>
    <string name="missing_age">Lo sentimos, es necesario conocer tu edad para que puedas usar esta aplicación. Por favor, agrega esa información en Facebook y vuelve a intentarlo.</string>
    <string name="comment_edit">Escriba algo sobre usted:</string>
    <string name="comment_edit_save">Guardar</string>
    <string name="comment_edit_cancel">Cancelar</string>
    <string name="item_logout">Cerrar Sesión</string>
    <string name="candidate_match_title">¡Has linkeado!</string>
    <string name="candidate_match_message">%1$s también quiere conocerte. Puedes ver todos tus links en la sección "Mis Links"</string>
    <string name="candidate_match_ok">Aceptar</string>
    <string name="settings_wrong_search_parameters_title">Configuración inválida</string>
    <string name="settings_wrong_search_parameters_description">Debes seleccionar buscar al menos amigos, hombres o mujeres. De otra forma, no podrás continuar.</string>
    <string name="settings_wrong_search_parameters_ok">Entendido</string>
    <string name="save_profile_title_ok">¡Perfil guardado!</string>
    <string name="save_profile_title_error">Ha ocurrido un error</string>
    <string name="save_profile_text_ok">La información de perfil se guardó exitosamente</string>
    <string name="save_profile_text_error">No hemos podido guardar la información, por favor vuelva a intentarlo.</string>
    <string name="save_profile_ok">Aceptar</string>
    <string name="save_settings_title_ok">¡Preferencias guardadas!</string>
    <string name="save_settings_title_error">Ha ocurrido un error</string>
    <string name="save_settings_text_ok">La información de preferencias se guardó exitosamente</string>
    <string name="save_settings_text_error">No hemos podido guardar la información, por favor vuelva a intentarlo.</string>
    <string name="save_settings_ok">Aceptar</string>
    <string name="go_to_link_profile">Ver perfil</string>
    <string name="link_distance_singular">A %1$s kilómetro</string>
    <string name="link_distance_plural">A %1$s kilómetros</string>
    <string name="link_distance_close">¡A menos de 100 metros!</string>
    <string name="select_action">Seleccione una acción</string>
    <string name="start_chat">Comenzar una conversación</string>
    <string name="wait_woman_title">Lo sentimos</string>
    <string name="wait_woman_description">Debes esperar a que ella inicie la conversación</string>
    <string name="wait_woman_ok">Entendido</string>
    <string name="go_to_my_link_profile">Ver perfil</string>
    <string name="loading_link_profile">Cargando información</string>
    <string name="error_loading_link_profile">Lo sentimos, no hemos podido cargar este perfil. Vuelva a intentarlo más tarde.</string>
    <string name="error_loading_link_profile_ok">Entendido</string>
    <string name="report_abuse_button">Denunciar usuario</string>
    <string name="report_abuse_loading">Realizando denuncia de usuario</string>
    <string name="report_abuse_success">La denuncia ha sido realizada con éxito</string>
    <string name="report_abuse_failure">Ha habido un error al intentar procesar la denuncia. Por favor vuelva a intentarlo</string>
    <string name="report_abuse_failure_ok">Entendido</string>
    <string name="report_abuse_success_ok">Aceptar</string>
    <string name="block_user_button">Bloquear usuario</string>
    <string name="block_user_loading">Realizando bloqueo de usuario</string>
    <string name="block_user_success">El bloqueo ha sido realizado con éxito</string>
    <string name="block_user_failure">Ha habido un error al intentar procesar el bloqueo. Por favor vuelva a intentarlo</string>
    <string name="block_user_failure_ok">Entendido</string>
    <string name="report_abuse_popup">¿Por qué motivo desea denunciar a este usuario?</string>
    <string name="report_abuse_popup_cancel">Cancelar</string>
    <string name="block_user_success_ok">Aceptar</string>
    <string name="block_user_popup">¿Está seguro que desea bloquear a este usuario?</string>
    <string name="block_user_popup_ok">Sí, estoy seguro</string>
    <string name="block_user_popup_cancel">Cancelar</string>
    <string name="report_abuse_comment_title">¿Algun detalle que nos quieras contar?</string>
    <string name="report_abuse_comment_save">Enviar</string>
    <string name="inactive_account_popup_title">Lo sentimos, tu cuenta ha sido desactivada.</string>
    <string name="inactive_account_popup_ok">Entendido</string>
    <string name="button_go_to_premium_pay_form">Quiero ser Premium</string>
    <string name="button_pay_loading_text">Procesando solicitud</string>
    <string name="pay_missing_fields">Por favor, complete todos los campos para continuar</string>
    <string name="pay_invalid_card">Por favor, ingrese una tarjeta de crédito Visa o MasterCard válida</string>

    <string name="pop_up_ok">Entendido</string>

    <string name="report_abuse_category_1">Lenguaje abusivo</string>
    <string name="report_abuse_category_2">Foto inapropiada</string>
    <string name="report_abuse_category_3">Spam</string>
    <string name="report_abuse_category_4">Otros</string>

    <string name="premium_advice_1">Superlinks ilimitados</string>
    <string name="premium_advice_2">Prioridad de aparición en todas las búsquedas</string>
    <string name="premium_advice_3">Sin publicidad</string>
    <string name="premium_price_title">Membresía de por vida, a tan sólo:</string>
    <string name="premium_price">Ar$100,00</string>
    <string name="premium_pay_form_toolbar">Formulario de pago</string>
    <string name="premium_pay_form">Formulario de pago</string>
    <string name="premium_pay_form_select">Seleccione un medio de pago:</string>
    <string name="premium_pay_form_credit_card_option">Tarjeta de crédito</string>
    <string name="premium_pay_form_pay_pal_option">PayPal</string>
    <string name="premium_pay_form_credit_card">Pago con tarjeta de crédito</string>
    <string name="premium_pay_form_pay_pal">Pago con PayPal</string>
    <string name="premium_pay_form_credit_card_valid">Tarjetas de crédito aceptadas:</string>
    <string name="premium_card_data">Ingrese los datos de su tarjeta:</string>
    <string name="premium_pay_form_button">Confirmar pago</string>
    <string name="premium_pay_attempt_success_title">¡Operación exitosa!</string>
    <string name="premium_pay_attempt_failure_title">Ha ocurrido un error</string>
    <string name="premium_pay_attempt_success_text">Ya puedes comenzar a disfrutar de todos tus beneficios.</string>
    <string name="premium_pay_attempt_failure_text">No hemos podido procesar la solicitud, por favor vuelva a intentarlo.</string>
    <string name="premium_paypal_user">Usuario</string>
    <string name="premium_paypal_password">Contraseña</string>
    <string name="premium_paypal_login">Iniciar sesión</string>
    <string name="premium_paypal_missing_fields">Por favor, complete todos los datos</string>
    <string name="premium_paypal_invalid_user">Lo sentimos, no encontramos ninguna cuenta con los datos ingresados.</string>
    <string name="premium_paypal_available">Disponible:</string>
    <string name="premium_paypal_price">Membresía:</string>
    <string name="premium_paypal_total">Saldo restante:</string>
    <string name="premium_paypal_price_error">No dispones de saldo suficiente para realizar esta compra.</string>

    <string name="go_to_advertisement_site">Ir al sitio web del anunciante</string>
    <string name="ad_content">Contenido publicitario</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat">Chat</string>
    <string name="action_logout">Salir</string>
    <string name="item_perfil">Perfil</string>
    <string name="item_settings">Preferencias</string>
    <string name="item_premium">Cuenta Premium</string>
    <string name="openDrawer">Abrir Menú</string>
    <string name="closeDrawer">Cerrar Menú</string>
    <string name="item_search_links">Buscar Links</string>
    <string name="item_my_links">Mis Links</string>
    <string name="my_chats">Mis Chats</string>
    <string name="new_links">Nuevos Links</string>
    <string name="no_data_available">No hay candidatos para mostrar</string>
    <string name="like_it">Me gusta</string>
    <string name="ticker">ticker</string>
    <string name="cancel">Cancelar</string>
    <string name="recommend">Recomendar</string>
    <string name="recommend_list">Recomendar este perfil a:</string>
    <string name="share_link_button">Recomendar usuario</string>
    <string name="recommend_user_failure">Ha habido un error al intentar enviar la recomendación. Por favor vuelva a intentarlo</string>
    <string name="recommend_user_failure_ok">Entendido</string>
    <string name="recommend_user_success">La recomendación se ha enviado con éxito</string>
    <string name="recommend_user_success_ok">Aceptar</string>
</resources>

