<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_search_links"
            android:checked="false"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/item_search_links" />

        <item
            android:id="@+id/drawer_my_links"
            android:checked="false"
            android:icon="@drawable/ic_forum_black_24dp"
            android:title="@string/item_my_links" />

        <item
            android:id="@+id/drawer_profile"
            android:checked="false"
            android:icon="@drawable/ic_profile"
            android:title="@string/item_perfil" />

        <item
            android:id="@+id/drawer_settings"
            android:checked="false"
            android:icon="@drawable/ic_build_black_24dp"
            android:title="@string/item_settings" />

        <item
            android:id="@+id/drawer_premium"
            android:checked="false"
            android:visible="true"
            android:icon="@drawable/ic_stars_black_24dp"
            android:title="@string/item_premium" />

        <item
            android:id="@+id/drawer_logout"
            android:checked="false"
            android:icon="@drawable/ic_launch_black_24dp"
            android:title="@string/item_logout" />

    </group>
</menu>