<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/payPalLoginRelativeLayout"
                tools:context="com.tddp2.grupo2.linkup.activity.PremiumPayPalLoginActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/payPalLoginToolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize">
        <TextView
                android:id="@+id/payPalLoginToolBarName"
                android:textSize="@dimen/toolbar_text_size"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/premium_pay_form_pay_pal"
                android:paddingStart="20dp"
                android:textColor="@color/white"
                android:layout_gravity="center"/>
    </android.support.v7.widget.Toolbar>
    <RelativeLayout
            android:layout_below="@+id/payPalLoginToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp">

        <LinearLayout android:id="@+id/payPalHeader"
                      android:orientation="horizontal"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_centerHorizontal="true">
            <ImageView android:src="@drawable/paypal_full_logo"
                       android:layout_width="wrap_content"
                       android:layout_height="80dp"
                       android:layout_marginLeft="10dp"/>

        </LinearLayout>

        <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_below="@id/payPalHeader">

            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:textColor="#372c24"
                      android:text="@string/premium_paypal_user"/>
            <EditText android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="5dp"
                      android:layout_marginBottom="20dp"
                      android:inputType="textEmailAddress"
                      android:id="@+id/payPalLoginUsername"
                      android:maxLines="1"/>

            <TextView android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:textColor="#372c24"
                      android:text="@string/premium_paypal_password"/>
            <EditText android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="5dp"
                      android:maxLines="1"
                      android:id="@+id/payPalLoginPassword"
                      android:inputType="textPassword"/>


            <android.support.v7.widget.AppCompatButton
                    android:id="@+id/payPalLogin"
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="14dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:padding="12dp"
                    android:layout_gravity="center_horizontal|bottom"
                    android:text="@string/premium_paypal_login"/>

        </LinearLayout>


    </RelativeLayout>
</RelativeLayout>
