<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.tddp2.grupo2.linkup.activity.PremiumPayFormActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/payFormToolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize">
        <TextView
                android:id="@+id/payFormToolBarName"
                android:textSize="@dimen/toolbar_text_size"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/premium_pay_form_credit_card"
                android:paddingStart="20dp"
                android:textColor="@color/white"
                android:layout_gravity="center"/>
    </android.support.v7.widget.Toolbar>
    <RelativeLayout
            android:layout_below="@+id/payFormToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp">
        <LinearLayout
                android:id="@+id/validCards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="20dp">
            <TextView
                    android:id="@+id/creditCardValidText"
                    android:textSize="22sp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/premium_pay_form_credit_card_valid"
                    android:textColor="@color/black"
                    android:layout_gravity="center"/>
            <LinearLayout
                    android:id="@+id/visaCard"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:paddingStart="20dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="5dp">
                <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_margin="4dp"
                        app:srcCompat="@drawable/visa_logo"
                        android:layout_gravity="center"/>
                <TextView
                        android:text="Visa"
                        android:textSize="18sp"
                        android:paddingLeft="10sp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" android:layout_gravity="center"/>
            </LinearLayout>
            <LinearLayout
                    android:id="@+id/masterCard"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="5dp">
                <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_margin="4dp"
                        app:srcCompat="@drawable/mastercard_logo"
                        android:layout_gravity="center"/>
                <TextView
                        android:text="MasterCard"
                        android:paddingLeft="10sp"
                        android:textSize="18sp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" android:layout_gravity="center"/>

            </LinearLayout>
            <TextView
                    android:textSize="22sp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/premium_card_data"
                    android:paddingTop="20dp"
                    android:textColor="@color/black"
                    android:layout_gravity="center"/>
        </LinearLayout>


        <com.braintreepayments.cardform.view.CardForm
                android:id="@+id/card_form"
                android:layout_below="@+id/validCards"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        <android.support.v7.widget.AppCompatButton
                android:id="@+id/payFormButton"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:padding="12dp"
                android:layout_gravity="center_horizontal|bottom"
                android:text="@string/premium_pay_form_button" android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</RelativeLayout>
